--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>장희성 기술 블로그</title>
+    <title>장지현 기술 블로그</title>
 
     <link rel="stylesheet" href="./lib.css">
     <link rel="stylesheet" href="./common.css">
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1 class="title-box-1 con">장희성 기술 블로그 - 홈</h1>
+    <h1 class="title-box-1 con">장지현 기술 블로그 - 홈</h1>
 
     <h2 class="title-box-2 con">글 목록</h2>
 
@@ -18,8 +18,8 @@
         <ul>
             <li><a href="article/4.html">CSS 3가지 색상의 막대 만들기</a></li>
             <li><a href="article/3.html">CSS display 속성 정리</a></li>
-            <li><a href="article/2.html">두번째 글 입니다.</a></li>
-            <li><a href="article/1.html">첫번째 글 입니다.</a></li>
+            <li><a href="article/2.html">CSS/Html 연습 폴더></li>
+            <li><a href="article/1.html">CSS/Html 실무 및 활용</a></li>
         </ul>
     </div>
 </body></html>
