--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <ul>
             <li><a href="article/4.html">CSS 3가지 색상의 막대 만들기</a></li>
             <li><a href="article/3.html">CSS display 속성 정리</a></li>
-            <li><a href="article/2.html">CSS/Html 연습 폴더></li>
+            <li><a href="article/2.html">CSS/Html 연습 폴더</a></li>
             <li><a href="article/1.html">CSS/Html 실무 및 활용</a></li>
         </ul>
     </div>
